crates/toon-schema/tests/compile_fail/missing_required_field_in_example.stderr
error: example 1 is missing required field 'field' (expected string)
 --> tests/compile_fail/missing_required_field_in_example.rs:6:8
  |
6 | struct MissingRequiredFieldInExample {
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
